<resources>
    <string name="app_name">Android_Exam_Project</string>
    <string name="title_activity_register">registerActivity</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="zip_code">ZIP CODE*</string>
    <string name="e_mail">E-MAIL*</string>
    <string name="cpr">CPR*</string>
    <string name="cpr_login">CPR</string>
    <string name="phone">PHONE</string>
    <string name="submit">submit</string>
    <string name="back">back</string>
    <string name="name">NAME*</string>
    <string name="register">register</string>
    <string name="password">PASSWORD*</string>
    <string name="password_login">PASSWORD</string>
    <string name="login">login</string>
    <string name="become_a_customer_at_kea_bank">BECOME A CUSTOMER AT KEA BANK</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">settingsActivity</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="save">Save</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="date_of_birth">DATE OF BIRTH*</string>
    <string name="ddmmyyxxxx">DDMMYYXXXX</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="logout">Logout</string>
    <string name="transfer">Transfer</string>
    <string name="title_activity_transaction">transactionActivity</string>
    <string name="send">Send</string>
    <string name="amount">AMOUNT</string>
    <string name="toAccountAcc">TO</string>
    <string name="fromAccount">FROM</string>
    <string name="toAccountReg">REG</string>
    <string name="confirm">Confirm</string>
    <string name="budget_savings_account_monthly_transfer_amount">MONTHLY TRANSFER</string>
    <string name="payment_service">Payment Service</string>
    <string name="new_account">New Account</string>
    <string name="current_payment_services">CURRENT PAYMENT SERVICES</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="add_new_service">Add New Service</string>
    <string name="lesser_than"><![CDATA[<]]></string>
    <string name="plus">+</string>
    <string name="autopay">AUTOPAY</string>
    <string name="account_statement">ACCOUNT STATEMENT</string>
    <string name="add_new_payment_service">ADD NEW PAYMENT SERVICE</string>
    <string name="accounts_header">ACCOUNTS</string>
    <string name="nem_id_confirmation">NEM-ID CONFIRMATION</string>
    <string name="apply">Apply</string>
    <string name="choose_the_new_account_you_want_to_apply_for">CHOOSE THE NEW ACCOUNT YOU WANT TO APPLY FOR</string>
    <string name="service_information">SERVICE INFORMATION</string>
    <string name="payment_id">PAYMENT ID</string>
    <string name="password_reset">PASSWORD RESET</string>
    <string name="account_descriptions">ACCOUNT OVERVIEW\n\n * DEFAULT: YOUR\'RE PROVIDED A NORMAL ACCOUNT AFTER SIGNING UP\n\n * BUDGET/SAVINGS: A BUDGET ACCOUNT IS PROVIDED AFTER SIGNING UP. THESE ACCOUNTS CAN ACCEPT A MONTHLY DEPOSIT FROM A DEFAULT/BUSINESS ACCOUNT\n\n * BUSINESS: THIS ACCOUNT IS NOT PROVIDED AFTER SIGNING UP, AND SHOULD BE APPLIED FOR.\n\n * PENSION: THIS ACCOUNT IS NOT PROVIDED AFTER SIGNING UP, AND SHOULD BE APPLIED FOR. WHEN TRANSFERRING MONEY TO THIS ACCOUNT A NEM-ID CONFIRMATION IS NEEDED. YOU WILL NOT BE ABLE TO WITHDRAW FROM THIS ACCOUNT UNTIL YOU HIT AN AGE OF 77</string>
</resources>
